--- a/boards/shields/MKB/MKB_R_TB.conf
+++ b/boards/shields/MKB/MKB_R_TB.conf
@@ -10,4 +10,21 @@ CONFIG_PMW3610_SMART_ALGORITHM=y
 CONFIG_PMW3610_REPORT_INTERVAL_MIN=14
 
 # Input processor configuration
+
 CONFIG_ZMK_INPUT_PROCESSOR_KEYBIND=y
+
+CONFIG_ZMK_STATUS_ADVERTISEMENT=y
+CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="MeKaBu"  # Display name
+
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_BATTERY_REPORTING=y
+
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_BASED=y
+CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=200
+CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=10000
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=120000
+
+CONFIG_PROSPECTOR_MAX_LAYERS=7
