Refactor MKB_L_JOY.conf for better organization

--- a/boards/shields/MKB/MKB_L_JOY.conf
+++ b/boards/shields/MKB/MKB_L_JOY.conf
@@ -1,3 +1,6 @@
+# ========================================
+# HARDWARE CONFIGURATION
+# ========================================
 # Analog input settings for sensors
 CONFIG_ADC=y
 CONFIG_ADC_ASYNC=y
@@ -5,21 +8,59 @@ CONFIG_ANALOG_INPUT=y
 CONFIG_ANALOG_INPUT_LOG_LEVEL_DBG=y
 CONFIG_ANALOG_INPUT_REPORT_INTERVAL_MIN=22
 CONFIG_ANALOG_INPUT_LOG_DBG_RAW=n
-
 CONFIG_ANALOG_INPUT_LOG_DBG_REPORT=n
 
-CONFIG_ZMK_STATUS_ADVERTISEMENT=y
-CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="MeKaBu"  # Display name
-
+# ========================================
+# SPLIT KEYBOARD - LEFT SIDE (CENTRAL)
+# ========================================
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+# Battery reporting
 CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
+# ========================================
+# PROSPECTOR SCANNER INTEGRATION
+# ========================================
+CONFIG_ZMK_STATUS_ADVERTISEMENT=y
+CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="MeKaBu"
+
+# Specify LEFT side as central device
+CONFIG_ZMK_STATUS_ADV_CENTRAL_SIDE="LEFT"
+
+# ========================================
+# POWER OPTIMIZATION (v1.1.1 Recommended)
+# ========================================
 CONFIG_ZMK_STATUS_ADV_ACTIVITY_BASED=y
-CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=200
-CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=10000
-CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=120000
 
+# Current settings (balanced for analog sensors):
+CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=200      # 5Hz when active
+CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=10000      # 0.1Hz when idle
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=120000  # 2 minutes to idle
+
+# Alternative: v1.1.1 recommended (better battery life):
+# CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=100      # 10Hz when active
+# CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=30000      # 0.03Hz when idle
+# CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=10000   # 10 seconds to idle
+
+# ========================================
+# DISPLAY CUSTOMIZATION
+# ========================================
+# Adjust layer display (0-6 = 7 layers)
 CONFIG_PROSPECTOR_MAX_LAYERS=7
+
+# Optional: Stop advertisements in deep sleep (max battery save)
+# CONFIG_ZMK_STATUS_ADV_STOP_ON_SLEEP=y
+
+# ========================================
+# WPM TRACKING (v1.1.1 New Feature)
+# ========================================
+# Balanced: 30s window (default)
+# CONFIG_ZMK_STATUS_ADV_WPM_WINDOW_SECONDS=30
+
+# ========================================
+# DEBUGGING (Development Only)
+# ========================================
+# CONFIG_LOG=y
+# CONFIG_ZMK_LOG_LEVEL_DBG=y
