Reorganize and document MKB_R_TB.conf settings

--- a/boards/shields/MKB/MKB_R_TB.conf
+++ b/boards/shields/MKB/MKB_R_TB.conf
@@ -1,7 +1,12 @@
+# ========================================
+# HARDWARE CONFIGURATION
+# ========================================
 # Basic hardware configurations
 CONFIG_SPI=y
 
-# PMW3610 optical sensor settings
+# ========================================
+# PMW3610 OPTICAL SENSOR SETTINGS
+# ========================================
 CONFIG_PMW3610=y
 CONFIG_PMW3610_SWAP_XY=n
 CONFIG_PMW3610_INVERT_X=n
@@ -9,22 +14,61 @@ CONFIG_PMW3610_INVERT_Y=y
 CONFIG_PMW3610_SMART_ALGORITHM=y
 CONFIG_PMW3610_REPORT_INTERVAL_MIN=14
 
-# Input processor configuration
-
+# ========================================
+# INPUT PROCESSOR CONFIGURATION
+# ========================================
 CONFIG_ZMK_INPUT_PROCESSOR_KEYBIND=y
 
-CONFIG_ZMK_STATUS_ADVERTISEMENT=y
-CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="MeKaBu"  # Display name
-
+# ========================================
+# SPLIT KEYBOARD - RIGHT SIDE (PERIPHERAL)
+# ========================================
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+# Battery reporting
 CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
+# ========================================
+# PROSPECTOR SCANNER INTEGRATION
+# ========================================
+CONFIG_ZMK_STATUS_ADVERTISEMENT=y
+CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="MeKaBu"
+
+# Left side is central (no need to specify on peripheral side)
+
+# ========================================
+# POWER OPTIMIZATION (v1.1.1 Recommended)
+# ========================================
 CONFIG_ZMK_STATUS_ADV_ACTIVITY_BASED=y
-CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=200
-CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=10000
-CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=120000
 
+# Current settings (balanced for optical sensor):
+CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=200      # 5Hz when active
+CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=10000      # 0.1Hz when idle
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=120000  # 2 minutes to idle
+
+# Alternative: v1.1.1 recommended (better battery life):
+# CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=100      # 10Hz when active
+# CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=30000      # 0.03Hz when idle
+# CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=10000   # 10 seconds to idle
+
+# ========================================
+# DISPLAY CUSTOMIZATION
+# ========================================
+# Adjust layer display (0-6 = 7 layers)
 CONFIG_PROSPECTOR_MAX_LAYERS=7
+
+# Optional: Stop advertisements in deep sleep (max battery save)
+# CONFIG_ZMK_STATUS_ADV_STOP_ON_SLEEP=y
+
+# ========================================
+# WPM TRACKING (v1.1.1 New Feature)
+# ========================================
+# Balanced: 30s window (default)
+# CONFIG_ZMK_STATUS_ADV_WPM_WINDOW_SECONDS=30
+
+# ========================================
+# DEBUGGING (Development Only)
+# ========================================
+# CONFIG_LOG=y
+# CONFIG_ZMK_LOG_LEVEL_DBG=y
