--- a/boards/shields/MKB/MKB_L_JOY.conf
+++ b/boards/shields/MKB/MKB_L_JOY.conf
@@ -30,19 +30,25 @@ CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="MeKaBu"
 CONFIG_ZMK_STATUS_ADV_CENTRAL_SIDE="LEFT"
 
 # ========================================
-# POWER OPTIMIZATION (v1.1.1 Recommended)
+# POWER OPTIMIZATION
 # ========================================
 CONFIG_ZMK_STATUS_ADV_ACTIVITY_BASED=y
 
-# Current settings (balanced for analog sensors):
-CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=200      # 5Hz when active
-CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=10000      # 0.1Hz when idle
-CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=120000  # 2 minutes to idle
+# Current settings (balanced for analog sensors)
+# Active: 5Hz when typing
+CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=200
+# Idle: 0.1Hz when idle
+CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=10000
+# Switch to idle mode after 2 minutes
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=120000
 
-# Alternative: v1.1.1 recommended (better battery life):
-# CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=100      # 10Hz when active
-# CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=30000      # 0.03Hz when idle
-# CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=10000   # 10 seconds to idle
+# Alternative: v1.1.1 recommended settings (better battery life)
+# Active: 10Hz when typing
+# CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=100
+# Idle: 0.03Hz when idle
+# CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=30000
+# Switch to idle mode after 10 seconds
+# CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=10000
 
 # ========================================
 # DISPLAY CUSTOMIZATION
@@ -50,17 +56,11 @@ CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=120000  # 2 minutes to idle
 # Adjust layer display (0-6 = 7 layers)
 CONFIG_PROSPECTOR_MAX_LAYERS=7
 
-# Optional: Stop advertisements in deep sleep (max battery save)
+# Optional: Stop advertisements in deep sleep
 # CONFIG_ZMK_STATUS_ADV_STOP_ON_SLEEP=y
 
 # ========================================
-# WPM TRACKING (v1.1.1 New Feature)
+# WPM TRACKING (v1.1.1)
 # ========================================
 # Balanced: 30s window (default)
 # CONFIG_ZMK_STATUS_ADV_WPM_WINDOW_SECONDS=30
-
-# ========================================
-# DEBUGGING (Development Only)
-# ========================================
-# CONFIG_LOG=y
-# CONFIG_ZMK_LOG_LEVEL_DBG=y
